# sql-governance-platform

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/actions/apply-migrations/: action.yml
.github/actions/auth-gcp/: action.yml
.github/actions/deploy-routines/: action.yml
.github/actions/dry-run-routines/: action.yml
.github/actions/notify-tg/: action.yml
.github/actions/write-manifest/: action.yml
.github/workflows/: reusable-deploy.yml  reusable-nightly-drift.yml  reusable-pr-validate.yml
docs/: dev-setup.md  onboarding-new-project.md  sql-rules.md  two-phase-deploy-and-migration-spec.md
scripts/: README-lineage.md  apply-migrations.sh  apply-routines.sh  drift-detector.py  exporter.py  lineage-extract.py  notify-tg.sh  setup-ledger.sql
templates/: CODEOWNERS.tmpl  PR_TEMPLATE.md.tmpl  README.md.tmpl  governance.yaml.tmpl
